--- a/app/src/main/res/layout/iss_item.xml
+++ b/app/src/main/res/layout/iss_item.xml
@@ -4,18 +4,18 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="16dp"
         android:id="@+id/latitude"/>
     <TextView
         android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/longitude"/>
 
 </LinearLayout>
